# parallel-compute-demo

./: .gitignore
finale/: CMakeLists.txt  README.md
finale/sock_server/: client.cxx  client.h  common_def.h  config.yml  http_examples.h  main.cxx  merge_sort.cxx  mmm_defs.h  quick_sort.cxx  rank_sort.cxx
mpi/: CMakeLists.txt  a.in  basic.cxx  cannon1.cxx  cannon2.cxx  codetimer.cxx  codetimer.h  gauss.cxx  gauss.h  mpi_test.cxx  test.sh  testing.cxx
test/: CMakeLists.txt  test.sh  wanshu.c
test/matrix/: CMakeLists.txt  matrix.cxx
test/sorting/: CMakeLists.txt  merge_array.cxx  test.sh  wanshu.cxx
third/: CMakeLists.txt  build.sh  test.sh  wanshu.cxx
